Fix watermark overflow

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
   font-family: "Heebo", sans-serif;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 a,
 h1,
